--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   dio: ^5.5.0+1
   url_launcher: ^6.3.0
   cloud_firestore: ^5.1.0
+  firebase_remote_config: ^5.0.3
+  firebase_analytics: ^11.2.0
 
 dev_dependencies:
   flutter_test:
